Lib/test/test__xxsubinterpreters.py
@@ -526,20 +526,17 @@ class InterpreterIDTests(TestBase):
         self.assertEqual(int(id), 10)
 
     def test_coerce_id(self):
-        id = interpreters.InterpreterID('10', force=True)
-        self.assertEqual(int(id), 10)
-
-        id = interpreters.InterpreterID(10.0, force=True)
-        self.assertEqual(int(id), 10)
-
         class Int(str):
             def __init__(self, value):
                 self._value = value
             def __int__(self):
                 return self._value
 
-        id = interpreters.InterpreterID(Int(10), force=True)
-        self.assertEqual(int(id), 10)
+        for id in ('10', b'10', bytearray(b'10'), memoryview(b'10'), '1_0',
+                   10.0, 10.1, Int(10)):
+            with self.subTest(id=id):
+                id = interpreters.InterpreterID(id, force=True)
+                self.assertEqual(int(id), 10)
 
     def test_bad_id(self):
         for id in [-1, 'spam']:
@@ -548,6 +545,8 @@ class InterpreterIDTests(TestBase):
                     interpreters.InterpreterID(id)
         with self.assertRaises(OverflowError):
             interpreters.InterpreterID(2**64)
+        with self.assertRaises(OverflowError):
+            interpreters.InterpreterID(float('inf'))
         with self.assertRaises(TypeError):
             interpreters.InterpreterID(object())
 
@@ -572,6 +571,14 @@ class InterpreterIDTests(TestBase):
         self.assertTrue(id1 == id1)
         self.assertTrue(id1 == id2)
         self.assertTrue(id1 == int(id1))
+        self.assertTrue(int(id1) == id1)
+        self.assertTrue(id1 == float(int(id1)))
+        self.assertTrue(float(int(id1)) == id1)
+        self.assertFalse(id1 == float(int(id1)) + 0.1)
+        self.assertFalse(id1 == str(int(id1)))
+        self.assertFalse(id1 == 2**1000)
+        self.assertFalse(id1 == float('inf'))
+        self.assertFalse(id1 == 'spam')
         self.assertFalse(id1 == id3)
 
         self.assertFalse(id1 != id1)
@@ -1105,20 +1112,17 @@ class ChannelIDTests(TestBase):
         self.assertEqual(cid.end, 'both')
 
     def test_coerce_id(self):
-        cid = interpreters._channel_id('10', force=True)
-        self.assertEqual(int(cid), 10)
-
-        cid = interpreters._channel_id(10.0, force=True)
-        self.assertEqual(int(cid), 10)
-
         class Int(str):
             def __init__(self, value):
                 self._value = value
             def __int__(self):
                 return self._value
 
-        cid = interpreters._channel_id(Int(10), force=True)
-        self.assertEqual(int(cid), 10)
+        for id in ('10', b'10', bytearray(b'10'), memoryview(b'10'), '1_0',
+                   10.0, 10.1, Int(10)):
+            with self.subTest(id=id):
+                cid = interpreters._channel_id(id, force=True)
+                self.assertEqual(int(cid), 10)
 
     def test_bad_id(self):
         for cid in [-1, 'spam']:
@@ -1164,6 +1168,14 @@ class ChannelIDTests(TestBase):
         self.assertTrue(cid1 == cid1)
         self.assertTrue(cid1 == cid2)
         self.assertTrue(cid1 == int(cid1))
+        self.assertTrue(int(cid1) == cid1)
+        self.assertTrue(cid1 == float(int(cid1)))
+        self.assertTrue(float(int(cid1)) == cid1)
+        self.assertFalse(cid1 == float(int(cid1)) + 0.1)
+        self.assertFalse(cid1 == str(int(cid1)))
+        self.assertFalse(cid1 == 2**1000)
+        self.assertFalse(cid1 == float('inf'))
+        self.assertFalse(cid1 == 'spam')
         self.assertFalse(cid1 == cid3)
 
         self.assertFalse(cid1 != cid1)
